# rs-max31865

./: Cargo.toml
src/: lib.rs  temp_conversion.rs
